# serial_generator

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  example.cpp  example1.cpp  example2.cpp  example3.cpp
src/: CMakeLists.txt  serial_generated.gnu.x86_64.h  serial_generator.cpp  serial_precompile.cpp  serial_precompile.h
